k8s/jenkins.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: jenkins
  selector:
    app: jenkins
    tier: jenkins
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
        tier: jenkins
    spec:
      containers:
      - name: jenkins
        image: chadmoon/jenkins-docker-kubectl
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
          name: jenkins
        volumeMounts:
        - name: jenkins-persistent-storage
          mountPath: /root/.jenkins
        - name: docker
          mountPath: /var/run/docker.sock
      volumes:
      - name: docker
        hostPath:
          path: /var/run/docker.sock
      # - name: docker-bin
      #   hostPath:
      #     path: /usr/bin/docker
      # - name: kubectl-bin
      #   hostPath:
      #     path: /usr/bin/kubectl
      - name: jenkins-persistent-storage
        persistentVolumeClaim:
          claimName: jenkins-claim

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: jenkins-ingress
spec:
 rules:
   - host: jenkins.127.0.0.1.xip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: jenkins
             servicePort: 8080
